Fix randomisation